--- a/.gitignore
+++ b/.gitignore
@@ -75,8 +75,9 @@ BattleRoyalRhythm_WwiseProject/*_WwiseProject.*.validationcache
 BattleRoyalRhythm_WwiseProject/*_WwiseProject.*.wsettings
 BattleRoyalRhythm_WwiseProject/**/*.akd
 
-# build stuff (unsure?)
-# Assets/Wwise/Deployment/Plugins/Windows/**/*.meta
+# build stuff
+Assets/Wwise/Deployment/Plugins/Windows/**/*.meta
+
 
 # WWise Picker (editor)
 # from https://www.audiokinetic.com/library/edge/?source=Unity&id=unity__troubleshooting.html
